<resources>
    <string name="app_name">致远影院</string>
    <string name="movie">电影</string>
    <string name="shop">商城</string>
    <string name="activity">活动</string>
    <string name="mine">我的</string>
    <string name="find">发现</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="userName">用户名</string>
    <string name="vipName">会员等级</string>
    <string name="myOrder">我的订单</string>
    <string name="All">全部</string>
    <string name="unpaied">待付款</string>
    <string name="ununsed">待消费</string>
    <string name="uncomment">待评论</string>
    <string name="refund">退款</string>
    <string name="login">登录</string>
    <string name="login_phone">账号</string>
    <string name="accountnumber">请输入手机号</string>
    <string name="login_password">密码</string>
    <string name="putPassword">请输入密码</string>
    <string name="loginProblem">登录遇到问题?</string>
    <string name="registered">注册</string>
    <string name="registeredNumber">注册账号</string>
    <string name="useShareLogin">- 使用第三方登录 -</string>
    <string name="regist_verification">验证</string>
    <string name="putVerification">请输入验证码</string>
    <string name="getVerification">点击获取</string>
    <string name="regist_userName">名称</string>
    <string name="putUserName">请输入用户名</string>
    <string name="loginNow">立即登录</string>
    <string name="lostPassword">忘记密码</string>
    <string name="confirm">确认</string>
    <string name="putNewPassword">请输入新密码</string>
    <string name="resetPass">更改密码</string>
    <string name="total">合计：</string>
    <string name="totalPrice">￥00.00</string>
    <string name="submitTotal">提交订单</string>
    <string name="goodsName">商品名称</string>
    <string name="goodsPrice">价格</string>
    <string name="goodsDis">商品描述</string>
    <string name="number">0</string>
    <string name="pay">支付</string>
    <string name="orderId">订单号:</string>
    <string name="shopName">名称</string>
    <string name="shopunitPrice">单价</string>
    <string name="shopTotalPrice">总价</string>
    <string name="shopAmount">数量</string>
    <string name="AllPrice">总金额:</string>
    <string name="orderTime">下单时间:</string>
    <string name="topTen">今日TOP10</string>
    <string name="advisory">影视快讯</string>
    <string name="bookingOffice">实时票房</string>
    <string name="advisoryTitle">资讯标题</string>
    <string name="source">资讯来源</string>
    <string name="time">时间</string>
    <string name="information">资讯</string>
    <string name="newAdvisory">—  最新资讯  —</string>
    <string name="movieName">电影名称</string>
    <string name="movieIntroduction">简评</string>
    <string name="buyTick">购票</string>
    <string name="reveal">正在热映</string>
    <string name="wait">即将上映</string>
    <string name="movieType">电影分类</string>
    <string name="movieFen">评分：</string>
    <string name="movieScore">10</string>
    <string name="movieTime">电影时长</string>
    <string name="movieDate">上映时间</string>
    <string name="movieSummary">影片概述</string>
    <string name="directors">导演</string>
    <string name="actors">演员</string>
    <string name="Comment">评论</string>
    <string name="loading">加载中</string>
    <string name="showDate">某月某日</string>
    <string name="showTime">00:00</string>
    <string name="endTime">00:00</string>
    <string name="Language">语言</string>
    <string name="showHall">大厅</string>
    <string name="selectSeat">已选座位</string>
    <string name="seatSure">确认座位</string>
    <string name="oneTimeSelect">一次最多选4个座位</string>
    <string name="pay_alipay">支付宝</string>
    <string name="pay_wechat">微信支付</string>
    <string name="cancel">取消</string>
    <string name="camera">相机</string>
    <string name="photo">相册</string>
    <string name="orderName">订单名称</string>
    <string name="button">按钮</string>
    <string name="contact">联系客服</string>
    <string name="putComment">发表评论</string>
    <string name="login_out">退出登录</string>
    <string name="version">当前版本</string>
    <string name="version_num">1.0</string>
    <string name="registeredTime">注册时间</string>
    <string name="rename">修改昵称</string>
    <string name="repass">修改密码</string>
    <string name="nickName">昵称:</string>
    <string name="oldPassWord">旧密码:</string>
    <string name="newPassWord">新密码:</string>
    <string name="put_oldPassWord">请输入旧密码</string>
    <string name="put_newPassWord">请输入新的密码</string>
    <string name="mineJF">我的积分:</string>
    <string name="allSelect">全选</string>
    <string name="deletedOrder">删除</string>
    <string name="countDown">倒计时</string>
</resources>
