<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ticket"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroundGray"
    android:orientation="vertical"
    tools:context="com.timestudio.zhiyuanmovie.ui.activity.movie.TicketActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/ticket_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/colorPrimaryDark"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:orientation="vertical"
        android:background="@drawable/textview_border"
        >
        <TextView
            android:id="@+id/tv_ticket_movieName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_5"
            android:text="@string/movieName"
            android:textSize="@dimen/sp_20"
            />
        <TextView
            android:id="@+id/tv_ticket_showDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_5"
            android:text="@string/showDate"
            android:textSize="@dimen/sp_15"
            android:textColor="@color/colorMainRed"
            />
        <TextView
            android:id="@+id/tv_ticket_movieHall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_5"
            android:text="@string/showHall"
            android:textSize="@dimen/sp_15"
            />
        <TextView
            android:id="@+id/tv_ticket_seat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_5"
            android:text="@string/seatSure"
            android:textSize="@dimen/sp_15"
            />
        <TextView
            android:id="@+id/tv_ticket_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_5"
            android:text="@string/shopunitPrice"
            android:textSize="@dimen/sp_15"
            />
        <TextView
            android:id="@+id/tv_ticket_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_5"
            android:text="@string/shopAmount"
            android:textSize="@dimen/sp_15"
            />
        <TextView
            android:id="@+id/tv_ticket_totalPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_5"
            android:text="@string/totalPrice"
            android:textSize="@dimen/sp_15"
            />
        <TextView
            android:id="@+id/tv_ticket_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_5"
            android:text="@string/orderId"
            android:textSize="@dimen/sp_15"
            />
        <TextView
            android:id="@+id/tv_ticket_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_5"
            android:text="@string/time"
            android:textSize="@dimen/sp_15"
            />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_buyTicketSure"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_30"
        android:background="@drawable/btn_sel_getverification"
        android:text="@string/pay"
        android:textColor="@color/colorWhite"
        />
</LinearLayout>
