<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_210"
        android:paddingTop="@dimen/dp_50"
        android:orientation="horizontal"
        android:background="@drawable/company_blur_bg"
        >
        <ImageView
            android:layout_width="@dimen/dp_100"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_30"
            android:layout_marginBottom="@dimen/dp_30"
            android:layout_marginRight="@dimen/dp_30"
            android:scaleType="fitXY"
            android:id="@+id/iv_movie_d_photo"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/dp_30"
            >
            <TextView
                android:id="@+id/tv_movie_d_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/movieName"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                />
            <TextView
                android:id="@+id/tv_movie_d_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/movieType"
                android:textColor="@color/textGray"
                android:textSize="12sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/movieFen"
                android:textColor="@color/textGray"
                android:textSize="12sp"
                />
            <TextView
                android:id="@+id/tv_movie_d_fen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movieScore"
                android:textColor="@color/colorButtonFalse"
                android:textSize="15sp"
                />
            <TextView
                android:id="@+id/tv_movie_d_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/movieTime"
                android:textColor="@color/textGray"
                android:textSize="12sp"
                />
            <TextView
                android:id="@+id/tv_movie_d_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_5"
                android:text="@string/movieDate"
                android:textColor="@color/textGray"
                android:textSize="12sp"
                />
        </LinearLayout>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/tv_movie_d_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:text="@string/movieSummary"
            />

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_15"
        android:background="@color/BackgroundGray"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_5"
        android:gravity="center_horizontal"
        android:text="@string/directors"
        android:textSize="@dimen/sp_15"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/BackgroundGray"
        />
    <TextView
        android:id="@+id/tv_movie_d_directors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_5"
        android:gravity="center_horizontal"
        android:text="@string/directors"
        android:textSize="@dimen/sp_15"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_5"
        android:background="@color/BackgroundGray"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_5"
        android:gravity="center_horizontal"
        android:text="@string/actors"
        android:textSize="@dimen/sp_15"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/BackgroundGray"
        />
    <TextView
        android:id="@+id/tv_movie_d_actors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_5"
        android:gravity="center_horizontal"
        android:text="@string/actors"
        android:textSize="@dimen/sp_15"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_15"
        android:background="@color/BackgroundGray"
        />
    <TextView
        android:id="@+id/tv_movie_d_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_5"
        android:gravity="center_horizontal"
        android:text="@string/Comment"
        android:textSize="@dimen/sp_15"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        android:background="@color/BackgroundGray"/>
</LinearLayout>