<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dp_50">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_5"
            android:text="@string/orderId"
            android:textSize="@dimen/sp_20"
            />
        <TextView
            android:id="@+id/tv_orderId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/sp_20"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        android:background="@color/BackgroundGray"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_5"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/shopName"
            android:textSize="@dimen/sp_20"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="@dimen/dp_5"
            android:text="@string/shopunitPrice"
            android:textSize="@dimen/sp_20"
            android:id="@+id/textView" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="@dimen/dp_5"
            android:text="@string/shopAmount"
            android:textSize="@dimen/sp_20"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_margin="@dimen/dp_5"
            android:text="@string/shopTotalPrice"
            android:textSize="@dimen/sp_20"
            android:id="@+id/textView4" />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        android:background="@color/BackgroundGray"
        />
</LinearLayout>