<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_80"
        android:orientation="horizontal"
        >
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/dp_10"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_showtime"
                android:text="@string/showTime"
                android:textSize="@dimen/sp_25"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_endTime"
                android:text="@string/endTime"
                android:layout_below="@+id/tv_showtime"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/dp_10"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_showLanguage"
                android:text="@string/Language"
                android:textSize="@dimen/sp_15"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/tv_showHall"
                android:text="@string/showHall"
                android:layout_below="@+id/tv_showLanguage"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/dp_10"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/tv_showPrice"
                android:textColor="@color/colorMainRed"
                android:text="@string/goodsPrice"
                android:textSize="@dimen/sp_20"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/dp_10"
            >

            <Button
                android:layout_width="@dimen/dp_50"
                android:layout_height="@dimen/dp_30"
                android:background="@drawable/btn_sel_getverification"
                android:id="@+id/btn_show_buy"
                android:text="@string/buyTick"
                android:textColor="@color/colorWhite"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:background="@color/BackgroundGray"/>
</LinearLayout>