<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_re_pass_word"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.timestudio.zhiyuanmovie.ui.activity.mine.RePassWordActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/repass_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >
    </android.support.v7.widget.Toolbar>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_30" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/BackgroundGray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_5"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oldPassWord"
            android:textSize="@dimen/sp_20"/>
        <EditText
            android:id="@+id/et_old_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_5"
            android:hint="@string/put_oldPassWord"
            android:textSize="@dimen/sp_15"
            android:inputType="textPassword"
            android:background="@null"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_10" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_5"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newPassWord"
            android:textSize="@dimen/sp_20"/>
        <EditText
            android:id="@+id/et_new_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_5"
            android:hint="@string/put_newPassWord"
            android:textSize="@dimen/sp_15"
            android:inputType="textPassword"
            android:background="@null"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/BackgroundGray"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:background="@drawable/btn_sel_getverification"
        android:text="@string/confirm"
        android:textColor="@color/colorWhite"
        android:id="@+id/btn_repass_commit"
        />
</LinearLayout>
