<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_setting"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.timestudio.zhiyuanmovie.ui.activity.mine.SettingActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/setting_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >
    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_10"
        android:background="@color/BackgroundGray"/>
    <LinearLayout
        android:id="@+id/ll_rename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tv_setting_rename"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:layout_margin="@dimen/dp_10"
            android:layout_gravity="center_vertical"
            android:text="@string/rename"
            android:textSize="@dimen/sp_15"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ic_sel_arrow"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_10"
        android:background="@color/BackgroundGray"/>

    <LinearLayout
        android:id="@+id/ll_repass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tv_setting_repass"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:layout_margin="@dimen/dp_10"
            android:layout_gravity="center_vertical"
            android:text="@string/repass"
            android:textSize="@dimen/sp_15"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ic_sel_arrow"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_10"
        android:background="@color/BackgroundGray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tv_setting_button"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:layout_margin="@dimen/dp_10"
            android:layout_gravity="center_vertical"
            android:text="@string/registeredTime"
            android:textSize="@dimen/sp_15"
            />
        <TextView
            android:id="@+id/tv_setting_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:layout_gravity="center_vertical"
            android:text="@string/time"
            android:textColor="@color/textGray"
            android:textSize="@dimen/dp_15"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_10"
        android:background="@color/BackgroundGray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:layout_margin="@dimen/dp_10"
            android:layout_gravity="center_vertical"
            android:text="@string/version"
            android:textSize="@dimen/sp_15"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:layout_gravity="center_vertical"
            android:text="@string/version_num"
            android:textColor="@color/textGray"
            android:textSize="@dimen/dp_15"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/BackgroundGray"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_login_out"
        android:layout_margin="@dimen/dp_20"
        android:text="@string/login_out"
        android:textColor="@color/colorWhite"
        android:background="@color/colorButtonTrue"
        />
</LinearLayout>
