<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_find_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/tv_find_top"
            android:layout_width="@dimen/dp_0"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:drawableTop="@drawable/ic_find_topten"
            android:gravity="center"
            android:textSize="@dimen/sp_15"
            android:text="@string/topTen"
            android:textColor="@color/mainText"
            />
        <TextView
            android:id="@+id/tv_find_advisory"
            android:layout_width="@dimen/dp_0"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:drawableTop="@drawable/ic_find_advisory"
            android:gravity="center"
            android:textSize="@dimen/sp_15"
            android:text="@string/advisory"
            android:textColor="@color/mainText"
            />
        <TextView
            android:id="@+id/tv_find_bookingOffice"
            android:layout_width="@dimen/dp_0"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_10"
            android:drawableTop="@drawable/ic_find_booking_office"
            android:gravity="center"
            android:textSize="@dimen/sp_15"
            android:text="@string/bookingOffice"
            android:textColor="@color/mainText"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/colorButtonFalse"
        />
</LinearLayout>